--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,5 +1,8 @@
 {
   "version": 2,
-  "builds": [{ "src": "server/index.js", "use": "@vercel/node"}],
-  "routes": [{ "src": "/api/(.*)", "dest": "/index.js" }]
+  "builds": [
+    { "src": "index.js", "use": "@vercel/node"},
+    { "src": "src/**/*", "use": "@vercel/static"}
+  ],
+  "routes": [{ "src": "/api/(.*)", "dest": "/" }]
 }
