--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 PORT = 8000
 MONGO_URI = mongodb+srv://akshanshgupta13:DxhvGOUbOiVW5xRg@cluster0.dkbthbs.mongodb.net/
 JWT_SECRET_KEY = mehta
+ORIGIN=travbook-frontend.vercel.app
