--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 PORT = 8000
 MONGO_URI = mongodb+srv://akshanshgupta13:DxhvGOUbOiVW5xRg@cluster0.dkbthbs.mongodb.net/
 JWT_SECRET_KEY = mehta
-ORIGIN=https://travbook-frontend.vercel.app/
+ORIGIN=https://travbook-frontend.vercel.app
