--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -4,5 +4,5 @@
     { "src": "index.js", "use": "@vercel/node"},
     { "src": "src/**/*", "use": "@vercel/static"}
   ],
-  "routes": [{ "src": "/api/(.*)", "dest": "/" }]
+  "routes": [{ "src": "/api/(.*)", "dest": "/index.js" }]
 }
