--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -3,5 +3,5 @@
   "builds": [
     { "src": "index.js", "use": "@vercel/node"}
   ],
-  "routes": [{ "src": "/api/(.*)", "dest": "/" }]
+  "routes": [{ "src": "/(.*)", "dest": "/" }]
 }
